# AgenticAiSecuritySandbox

./: .gitignore  Agent.cpp  Agent.h  C++BuildFile.txt  C++RunFile.txt  CMakeLists.txt  EnvironmentGraph.cpp  EnvironmentGraph.h  _EnvironmentGraph.cpp  first.cpp  main.cpp  schema.h  vcpkg.json
Depricated/: GeminiChecks.cpp  GeminiChecks.h
